fix: code smells (#88)
Signed-off-by: Pascal Krause <pascal.krause@sap.com>